# Aether

./: .gitattributes  .gitignore  PROJECT_STRUCTURE_ANALYSIS.md  check_db.py  check_status.bat  commit_all.bat  debug_feed.py  debug_git.bat  diagnose_git.bat  package-lock.json  package.json  perform_commits.bat  seed_public.py  status.txt  test_api.py
Aether/backend/: .dockerignore  Cargo.toml  Dockerfile  aether.db  check_log.txt  debug_edit_published.sh  debug_kb_list.sh  debug_rebac.sh  debug_rebac_full.sh  debug_validation.sh  start_backend.bat  start_backend.sh  technical_specification.md  test_input.txt
Aether/backend/backups/: 27fa03d9-629a-441e-9945-ea285af5532c_20260205_052711.akb  27fa03d9-629a-441e-9945-ea285af5532c_20260205_053834.akb  c971a3a9-f392-429b-a739-ff6a97aa7161_20260205_051030.akb
Aether/backend/migrations/: 001_create_blocks.sql  schema.sql  z_add_public_version_id.sql  z_add_publication_column.sql  z_create_missing_tables.sql  z_create_user_settings.sql  z_create_vocab_examples.sql  z_fix_vocab_schema.sql  z_fix_vrkb_schema.sql  z_prkb_v2_schema.sql  z_shared_sentences.sql  zz_fix_uuid_format.sql
Aether/backend/scripts/debug/: debug_duplicate_title_flow.sh  debug_kb_create.sh  debug_kb_folder.sh  debug_kb_move.sh  debug_publish_rules.sh
Aether/backend/src/: main.rs
Aether/backend/src/domain/: diff_service.rs  graph_service.rs  indexer_service.rs  mod.rs  models.rs  permission_service.rs  ports.rs  sentence_parser.rs
Aether/backend/src/domain/blocks/: mod.rs  models.rs  parser.rs  registry.rs  strategies.rs
Aether/backend/src/domain/dtos/: user.rs
Aether/backend/src/domain/graph/: computed_tree.rs  mod.rs
Aether/backend/src/domain/kb/: ast.rs  mod.rs  registry.rs  tests.rs
Aether/backend/src/domain/memos/: mod.rs
Aether/backend/src/domain/models/: graph_node.rs
Aether/backend/src/domain/portability/: mod.rs  models.rs  ports.rs
Aether/backend/src/domain/prkb/: models.rs  ports.rs
Aether/backend/src/infrastructure/: mod.rs
Aether/backend/src/infrastructure/auth/: jwt_service.rs  mod.rs
Aether/backend/src/infrastructure/bootstrap/: database.rs  mod.rs  router.rs  seeding.rs  services.rs
Aether/backend/src/infrastructure/dictionary/: loader.rs
Aether/backend/src/infrastructure/persistence/: entities.rs  mod.rs  postgres.rs  postgres_comment_test.rs  postgres_test.rs  postgres_version_test.rs
Aether/backend/src/infrastructure/plugins/: mod.rs  wasm_loader.rs
Aether/backend/src/infrastructure/services/: arxiv.rs  asset_manager.rs  backup_service.rs  export_service.rs  mod.rs  (+2 more)
Aether/backend/src/interface/: mod.rs  state.rs
(+433 files in other folders)
