[package]
name = "aether_backend"
version = "0.1.0"
edition = "2021"
authors = ["The Geek Master <master@aether.io>"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (ORM)
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Plugin System (WASM)
wasmtime = "16.0"

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
ring = "0.17"

# Abstraction
async-trait = "0.1"

[workspace]
members = ["."]

