[package]
name = "aether_backend"
version = "0.1.0"
edition = "2021"
authors = ["The Geek Master <master@aether.io>"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (ORM)
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Error Handling
thiserror = "1"

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
ring = "0.17"

# Abstraction
async-trait = "0.1"
similar = "2.7.0"
axum-extra = { version = "0.9", features = ["multipart"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"

# Dictionary & Search
stardict = "=0.2.0"
fuzzy-matcher = "0.3"
md5 = "0.8.0"
async-recursion = "1.1.1"
anyhow = "1.0.100"
fst = { version = "0.4.7", features = ["levenshtein"] }
moka = { version = "0.12", features = ["future"] }
strsim = "0.10"

[workspace]
members = ["."]

